Details
-
Bug
-
Resolution: Done
-
P0: Blocker
-
5.2.0 Beta1
-
None
-
f1268d137ea7839b320c84314d0c2265f5a629ba
Description
The platform-integration styleHints ShowIsMaximized and ShowIsFullscreen are not enough to determine the default show behaviour for a platform. This is evident by patches such as https://codereview.qt-project.org/#change,70949 which hard-codes the Android behaviour for all platforms.
We need a way for the platform to control this.
Attachments
Issue Links
- is required for
-
QTBUG-33863 Issues to be fixed before Qt5.2 RC1 release
-
- Closed
-
- relates to
-
QTBUG-34765 Dialogs are shown maximized on android
-
- Closed
-