src/gui/kernel/qplatformintegration.h
@@ -429,6 +429,16 @@ decl_stmt|;
 name|virtual
 name|Qt
 operator|::
+name|WindowState
+name|defaultWindowState
+argument_list|(
+argument|Qt::WindowFlags
+argument_list|)
+specifier|const
+expr_stmt|;
+name|virtual
+name|Qt
+operator|::
 name|KeyboardModifiers
 name|queryKeyboardModifiers
 argument_list|()
