src/gui/kernel/qstylehints.cpp
@@ -333,7 +333,7 @@ return|;
 block|}
 end_function
 begin_comment
-comment|/*!     Returns \c true if the platform defaults to windows being fullscreen,     otherwise \c false.      \sa QWindow::show() */
+comment|/*!     Returns \c true if the platform defaults to windows being fullscreen,     otherwise \c false.      \note The platform may still choose to show certain windows non-fullscreen,     such as popups or dialogs. This method only returns the default behavior.      \sa QWindow::show() */
 end_comment
 begin_function
 DECL|function|showIsFullScreen
